# AICEmu

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/moe/tqlwsl/aicemu/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: felica_template.json  xposed_init
app/src/main/java/moe/tqlwsl/aicemu/: ApduService.kt  EmuCard.kt  FelicaCard.kt  GlobalVar.kt  MainActivity.kt  ReadCard.kt  SettingActivity.kt  xp.java
app/src/main/jni/: main.cpp  main.h
app/src/main/res/drawable/: aic.xml  aic_bg.xml  aic_bg_border.xml  aic_bg_border_radius.xml  aic_fill.xml
app/src/main/res/layout/: activity_main.xml  activity_setting.xml  add_card.xml  card.xml
app/src/main/res/menu/: card_menu.xml  toolbar_menu.xml
app/src/main/res/values/: array.xml  colors.xml  strings.xml  style.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: apdu_service.xml  host_nfcf_service.xml
app/src/test/java/moe/tqlwsl/aicemu/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
